# ChangeLog for media-libs/gst-plugins-base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.93 2009/05/03 17:33:22 klausman Exp $

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-base-0.10.22.ebuild:
  Stable on alpha, bug #266986

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  arm/sh stable wrt #232054

*gst-plugins-base-0.10.22 (30 Mar 2009)

  30 Mar 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-base-0.10.22.ebuild:
  Version bump, also fix CVE-2009-0586 (bug #261594)

*gst-plugins-base-0.10.21-r1 (24 Dec 2008)

  24 Dec 2008; <ssuominen@gentoo.org> +gst-plugins-base-0.10.21-r1.ebuild:
  Stop using separate plugins, drop .la files, disable static libs to speed
  up

  09 Dec 2008; <ssuominen@gentoo.org> gst-plugins-base-0.10.21.ebuild:
  Depend on >= gstreamer-0.10.21 wrt #250339, thanks to Jeroen Roovers.

*gst-plugins-base-0.10.21 (05 Dec 2008)

  05 Dec 2008; <ssuominen@gentoo.org>
  +files/gst-plugins-base-0.10.21-gtkdoc.patch,
  +gst-plugins-base-0.10.21.ebuild:
  Version bump.

  23 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  Stable for HPPA (bug #232054).

  08 Aug 2008; Markus Meier <maekke@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  x86 stable, bug #232054

  08 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  alpha stable

  31 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  ia64/sparc stable wrt #232054

  01 Aug 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  Marking gst-plugins-base-0.10.20 ppc64 stable for bug 232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-base-0.10.20.ebuild:
  Marking gst-plugins-base-0.10.20 ppc stable for bug 232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-base-0.10.20.ebuild: