@@ -9,10 +9,12 @@ DIST gst-plugins-base-0.10.14.tar.bz2 1625388 RMD160 507666ea6d2a4657d315dfe54c8
 DIST gst-plugins-base-0.10.20.tar.bz2 1986182 RMD160 2283fa2743a18630c3dab5a77d2b4eae9253eb97 SHA1 e887f071eda3128249657805dc5a42b2ad2d3bef SHA256 aa3d5ce29232ee5b24b6c032194ac1fc757309ea50ac850c0db46e45ab0a78ff
 DIST gst-plugins-base-0.10.21.tar.bz2 1982446 RMD160 4fa9056c8cc5d21db30074596831ffc14f6b671b SHA1 ae83b3306f52aa3affd014dade30c6cd5c2baa66 SHA256 673f4a45a0f3aa99606a58097bde02d09ad51d7b2e702f0d68eeb6db21d47e93
 DIST gst-plugins-base-0.10.22.tar.bz2 2118085 RMD160 013de77422d6e89b64cf55ff7299b0ff1e38ef8a SHA1 8e6a894858f5412234ce1591bbb773102c150cb7 SHA256 184c5aed03ebfe38a276fc03cb7d8685d9a6da5a48bf6a0565c83e11a29cd5f9
+DIST gst-plugins-base-0.10.23.tar.bz2 2126280 RMD160 3b08bdeeb5237fb0e6e918ac5d6a97064fa8fe98 SHA1 f0b66ddca22187c8011b37a5d806c7dc7e68b7f1 SHA256 1c11d98eb9a1b1bc54becf465e74c2aa4019bb57a31dd70686269af6a9b9e93b
 EBUILD gst-plugins-base-0.10.14.ebuild 1383 RMD160 ca495d5df8d2a9d3c6fe7e27b8638d360f320290 SHA1 642a6940e814438e7b24fbd39d87d3081ea8d8c2 SHA256 4b2a71c1905e3f80e0267d56cafdaa6ea80dd3b4052ca1be74bb1f1ba9b2ce38
 EBUILD gst-plugins-base-0.10.20.ebuild 1477 RMD160 68df2e2655eed93d067ffad2e1ebed7bd08cbca7 SHA1 7c26279dc5f658da5d88456fcf0fbdf0d4e6ad5b SHA256 31f1e28b95da65d24c57c7c664218eefed3fc9275f6ab4a248f3f0cde5ddbeb2
 EBUILD gst-plugins-base-0.10.21-r1.ebuild 3052 RMD160 97f3a162e576649150d8051b635bb593d7f0be7b SHA1 ac0ebcf850b66927a5755f49b0892d396b216c33 SHA256 1fa6dbee36f56e87b60b86e3b6206e7714027f54f025f44c6cb087caec5d86b4
 EBUILD gst-plugins-base-0.10.21.ebuild 1642 RMD160 a8857581535dec408fe1eb1966e0cf21e155fef2 SHA1 3a4a830599fb2af3555a898f2caf1b78984d1dbe SHA256 9c4626c20e6e81122b35845207cac1f962382f62d8555983cdd49a912900e79e
 EBUILD gst-plugins-base-0.10.22.ebuild 1221 RMD160 b51a44ff993e28840929f118d34113af9736ed93 SHA1 cb150c365a2f875ccd65ba05871ad81ef54c083f SHA256 1acf19711bfbf64a06a8b44b3c236428dcb2409b8dc291862b2a4327b90493b5
-MISC ChangeLog 12935 RMD160 ca020dcc346d50e3d6d7544282a57fbcdc362707 SHA1 8e0aa3db0c0f94e9020abe05dd68c236eb06a908 SHA256 d43a8d63bfa777c1e728089acf612cb9cee0a36fea79d41821b8f6628de464f3
+EBUILD gst-plugins-base-0.10.23.ebuild 1111 RMD160 24f81f385988ed15221eab9ad9f6d73eac81267f SHA1 63daa79ea653c961f2839c76be30a655ed4769ea SHA256 d657dadad1e9601138421656cb7125e3f597c01c7e68bb5a5841064ea866a93c
+MISC ChangeLog 13076 RMD160 7c2c4e23abadf35bc08d4443285fc85421f4db0b SHA1 2f2f759769ea8d5a1d2dfa777a4a1924bb01035d SHA256 206e68633b2fca4fd5f202370a315f5115e9b01f7c26809a7f135101dfd7a760
 MISC metadata.xml 281 RMD160 07e04e9ed3a829881972155cac9ebb38fdd5d70c SHA1 d5e60b9979d4b2dc4ffd04990a13d4a2fb142a51 SHA256 a66d0d74b7a3b46fb7485773ebc5016917f90e1f046b26def304b18133856b29
