@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gst-plugins-base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.93 2009/05/03 17:33:22 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.94 2009/05/11 03:15:30 tester Exp $
+
+*gst-plugins-base-0.10.23 (11 May 2009)
+
+  11 May 2009; Olivier Crête <tester@gentoo.org>
+  +gst-plugins-base-0.10.23.ebuild:
+  Version bump
 
   03 May 2009; Tobias Klausmann <klausman@gentoo.org>
   gst-plugins-base-0.10.22.ebuild:
